# agent-auto-self-optimizing-closed-loop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_ANCHOR.md  README_CN.md  pyproject.toml
.agent-loop-data/metrics/: task-runs.csv
.agent-loop-data/reports/: dashboard-optimization-state.json
.agents/optsmith-data/metrics/: task-runs.csv
.agents/skills/agent-optsmith/: SKILL.md
.agents/skills/aoso-repo-maintainer/: SKILL.md
.agents/skills/optsmith-repo-maintainer/: SKILL.md
.agents/skills/optsmith-workflow-maintainer/: SKILL.md
.github/workflows/: ci.yml
Formula/: aoso-skill.rb  optsmith.rb
aoso_skill_cli/: __init__.py  cli.py
docs/: closed-loop-playbook.md  measurement-framework.md  project-integration-guide-cn.md
metrics/: task-runs.csv
optsmith_cli/: __init__.py  cli.py
reports/skill-optimization/: 2026-03-09-aoso-repo-maintainer-optimization-plan.md
scripts/: auto_run_loop.sh  dashboard_server.py  log_task_run.sh  metrics_report.sh  optimize_skill.sh  weekly_review.sh
skills/agent-optsmith/: SKILL.md
skills/agent-optsmith-loop/: SKILL.md
skills/agent-optsmith-loop/references/: command-recipes.md
skills/agent-optsmith-loop/scripts/: optimize_skill.sh  setup_loop_workspace.sh
skills/agent-optsmith/references/: command-recipes.md
skills/agent-self-optimizing-loop/: SKILL.md
skills/agent-self-optimizing-loop/agents/: openai.yaml
skills/agent-self-optimizing-loop/references/: command-recipes.md
skills/agent-self-optimizing-loop/scripts/: auto_run_loop.sh  dashboard_server.py  (+4 more)
skills/aoso-repo-maintainer/: SKILL.md
(+20 files in other folders)
