[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optsmith"
version = "0.1.2"
description = "CLI for initializing and operating the agent-optsmith-loop skill in projects."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Optsmith Maintainers" }
]
keywords = ["codex", "skill", "self-optimization", "dashboard"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
]

[project.scripts]
optsmith = "optsmith_cli.cli:main"

[tool.setuptools]
packages = ["optsmith_cli"]
